# Rust_Mongo

./: .editorconfig  .gitignore  Cargo.toml  README.md  docker-compose.yml
script/: create_book.sh  delete_book.sh  edit_book.sh  fetch_books.sh
src/: db.rs  errors.rs  handlers.rs  lib.rs  main.rs  utils.rs
tests/: integration_test.rs
